@@ -39,6 +39,7 @@ Release 1.3.7 (2010-0?-??)
   from the Application destructor.
 - added /startup option to specify startup mode for Windows services (automatic or manual)
 - fixed SF# 2967354: SecureSocketImpl shutdown/close problem
+- fixed SF# 3006340: LinearHashTable grows even if key already exists
 
 
 Release 1.3.6p2 (2010-01-15)
@@ -1220,4 +1221,4 @@ building the libraries.
 
 
 --
-$Id: //poco/1.3/dist/CHANGELOG#90 $
+$Id: //poco/1.3/dist/CHANGELOG#91 $
